--- a/templates/base.html
+++ b/templates/base.html
@@ -20,8 +20,18 @@
 
         <div id="wrapper">
 
-
-            Finally, setup the DATABASES part of the file to reflect your database deployment. If you just want to try out things locally, sqlite3 is the easiest database to set up, however it should not be used in production. If you still wish to use it for now, this is what your DATABASES setting should look like:
+            <div id="header">
+                Finally, setup the DATABASES part of the file to reflect your database deployment. If you just want to try out things locally, sqlite3 is the easiest database to set up, however it should not be used in production. If you still wish to use it for now, this is what your DATABASES setting should look like:
+            </div>
+            <div id="bread_crumb">
+                Finally, setup the DATABASES part of the file to reflect your database deployment. If you just want to try out things locally, sqlite3 is the easiest database to set up, however it should not be used in production. If you still wish to use it for now, this is what your DATABASES setting should look like:
+            </div>
+            <div id="container">
+                Finally, setup the DATABASES part of the file to reflect your database deployment. If you just want to try out things locally, sqlite3 is the easiest database to set up, however it should not be used in production. If you still wish to use it for now, this is what your DATABASES setting should look like:
+            </div>
+            <div id="footer">
+                Finally, setup the DATABASES part of the file to reflect your database deployment. If you just want to try out things locally, sqlite3 is the easiest database to set up, however it should not be used in production. If you still wish to use it for now, this is what your DATABASES setting should look like:
+            </div>
 
         </div>
 
