--- a/static/css/openring.css
+++ b/static/css/openring.css
@@ -21,6 +21,18 @@ body {
     border : 1px solid black ;
     width: 940px;
     margin: auto;
+    min-height: 140px;
+}
+.logo {
+    border : 1px solid black ;
+    width: 35%;
+    float: left;
+    margin: 25px 15px;
+}
+.menu_container {
+    border : 1px solid black ;
+    width: 60%;
+    float: left;
 }
 /***************** hearder end **********************/
 
