menu container css completed

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,13 +19,14 @@
         {% cms_toolbar %}
 
         <div id="wrapper">
-
             <div id="header">
                 <div class="logo" id="" name="">
                     {% placeholder "logo" %}
                 </div>
                 <div class="menu_container" id="" name="">
-                    menu goes here
+                    <div class="menu" id="" name="">
+                        menu goes here
+                    </div>
                 </div>
             </div>
             <div id="bread_crumb">
