--- a/static/css/openring.css
+++ b/static/css/openring.css
@@ -25,14 +25,25 @@ body {
 }
 .logo {
     border : 1px solid black ;
-    width: 35%;
+    width: 30%;
     float: left;
-    margin: 25px 15px;
+    margin: 30px 15px;
+    min-height: 75px;
 }
 .menu_container {
     border : 1px solid black ;
-    width: 60%;
+    width: 65%;
     float: left;
+    margin: 30px 0;
+    min-height: 75px;
+    position: relative;
+}
+.menu {
+    border: 1px solid black;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    width: 100%;
 }
 /***************** hearder end **********************/
 
