--- a/static/css/openring.css
+++ b/static/css/openring.css
@@ -18,20 +18,17 @@ body {
 
 /***************** hearder start **********************/
 #header {
-    border : 1px solid black ;
     width: 940px;
     margin: auto;
     min-height: 140px;
 }
 .logo {
-    border : 1px solid black ;
     width: 30%;
     float: left;
     margin: 30px 15px;
     min-height: 75px;
 }
 .menu_container {
-    border : 1px solid black ;
     width: 65%;
     float: left;
     margin: 30px 0;
@@ -39,11 +36,35 @@ body {
     position: relative;
 }
 .menu {
-    border: 1px solid black;
     bottom: 0;
-    left: 0;
+    right: 0;
     position: absolute;
-    width: 100%;
+    list-style: none outside none;
+}
+.selected {
+    float: left;
+    margin: 0 25px;
+    padding: 10px 30px;
+    cursor:pointer;
+    font-weight: bold;
+}
+.sibling {
+    float: left;
+    margin: 0 25px;
+    padding: 10px 30px;
+    cursor:pointer;
+}
+.menu a {
+    color:#6F7071;
+    text-decoration:none;
+}
+.menu li:hover { 
+    background-color: #E0E0E0;
+    -webkit-box-shadow: 0 8px 6px -6px black;
+    -moz-box-shadow: 0 8px 6px -6px black;
+    box-shadow: 0 8px 6px -6px black;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
 }
 /***************** hearder end **********************/
 
