--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 {% load cms_tags %}
 
-{% block base_content %}
-  {% placeholder template_1_content %}
-{% endblock %}
+
+{% block logo %}
+<!--Inherit logo from home-->
+{% show_placeholder "logo" "home" %}
+{% endblock logo %}
+
+{% block content %}
+I am in blog
+{% endblock content %}
