--- a/templates/base.html
+++ b/templates/base.html
@@ -35,12 +35,12 @@
             </div>
 
             <div id="bread_crumb">
+                <!--block to display bread crum and search-->
                 {% block bread_crumb %}{% endblock %}
             </div>
 
             <div id="container">
                 {% block content %}
-                Finally, setup the DATABASES part of the file to reflect your database deployment. If you just want to try out things locally, sqlite3 is the easiest database to set up, however it should not be used in production. If you still wish to use it for now, this is what your DATABASES setting should look like:
                 {% endblock %}
             </div>
             <div id="footer">
