--- a/templates/home.html
+++ b/templates/home.html
@@ -9,5 +9,10 @@
 {% endblock %}
 
 {% block content %}
-I am in home
+    <div class="os_stack">
+    {% placeholder "opensource_stack" %}
+    </div>
+    <div class="os_stack">
+    {% placeholder "opensource_contribution" %}
+    </div>
 {% endblock content %}
