--- a/static/css/openring.css
+++ b/static/css/openring.css
@@ -101,12 +101,14 @@ body {
 
 /***************** footer start **********************/
 #footer { 
-    border: 1px solid #EDEDED;
     border-top: 1px solid #999999;
     background: none repeat scroll 0 0 #CBCBCB;
     color: #717171;
     font-size: 10px;
     line-height: 15px;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
 }
 .footer_container {
     margin: 20px 140px;
