--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,12 +1,29 @@
 {% extends "base.html" %}
 {% load cms_tags %}
+{% load zinnia_tags i18n %}
 
 
 {% block logo %}
-<!--Inherit logo from home-->
-{% show_placeholder "logo" "home" %}
+    <!--Inherit logo from home-->
+    {% show_placeholder "logo" "home" %}
 {% endblock logo %}
 
 {% block content %}
-    {% placeholder "zinnia_blog" %}
+    <div class="blog_entry">
+        {% placeholder "zinnia_blog" %}
+    </div>
+    <div class="blog_entry_tools">
+        <div class="categories_all">
+        {% get_categories %}
+        </div>
+        <div class="tags_all">
+        {% get_tag_cloud %}
+        </div>
+        <div class="archives">
+        {% get_archives_entries_tree %}
+        </div>
+        <div class="calender">
+        {% get_calendar_entries %}
+        </div>
+    </div>
 {% endblock content %}
