--- a/templates/blog.html
+++ b/templates/blog.html
@@ -4,26 +4,35 @@
 
 
 {% block logo %}
-    <!--Inherit logo from home-->
-    {% show_placeholder "logo" "home" %}
+<!--Inherit logo from home-->
+{% show_placeholder "logo" "home" %}
 {% endblock logo %}
 
 {% block content %}
-    <div class="blog_entry">
-        {% placeholder "zinnia_blog" %}
-    </div>
-    <div class="blog_entry_tools">
-        <div class="categories_all">
+<div class="blog_entry">
+    {% placeholder "zinnia_blog" %}
+</div>
+<div class="blog_entry_tools">
+    <div class="widget">
+        <div class="widget_title">
+            {% trans "Categories" %}
+        </div>
         {% get_categories %}
-        </div>
-        <div class="tags_all">
-        {% get_tag_cloud %}
-        </div>
-        <div class="archives">
-        {% get_archives_entries_tree %}
-        </div>
-        <div class="calender">
-        {% get_calendar_entries %}
-        </div>
     </div>
+    <div class="widget">
+        <div class="widget_title">
+            {% trans "Categories" %}
+        </div>
+        {% get_categories %}
+    </div>
+    <div class="tags_all">
+        {% get_tag_cloud %}
+    </div>
+    <div class="archives">
+        {% get_archives_entries_tree %}
+    </div>
+    <div class="calender">
+        {% get_calendar_entries %}
+    </div>
+</div>
 {% endblock content %}
