--- a/templates/blog.html
+++ b/templates/blog.html
@@ -21,11 +21,8 @@
     </div>
     <div class="widget">
         <div class="widget_title">
-            {% trans "Categories" %}
+            {% trans "Tag Cloud" %}
         </div>
-        {% get_categories %}
-    </div>
-    <div class="tags_all">
         {% get_tag_cloud %}
     </div>
     <div class="archives">
