--- a/templates/base.html
+++ b/templates/base.html
@@ -35,8 +35,10 @@
             </div>
 
             <div id="bread_crumb">
-                <!--block to display bread crum and search-->
-                {% block bread_crumb %}{% endblock %}
+                <div class="bread_crumb_holder" id="" name="">
+                    <!--block to display bread crum and search-->
+                    {% block bread_crumb %}{% endblock %}
+                </div>
             </div>
 
             <div id="container">
