--- a/templates/zinnia/base.html
+++ b/templates/zinnia/base.html
@@ -8,6 +8,10 @@
 {% show_placeholder "logo" "home" %}
 {% endblock logo %}
 
+{% block bread_crumb %}
+
+{% endblock bread_crumb %}
+
 {% block content %}
 
 <div class="blog_entry">
