--- a/templates/zinnia/base.html
+++ b/templates/zinnia/base.html
@@ -9,7 +9,7 @@
 {% endblock logo %}
 
 {% block bread_crumb %}
-
+        {% include "zinnia/tags/search_form.html" %}
 {% endblock bread_crumb %}
 
 {% block content %}
