search box css improved

--- a/static/css/openring.css
+++ b/static/css/openring.css
@@ -94,6 +94,8 @@ a:link {
     border: 1px solid #999999;
     padding: 4px;
     margin: 0 4px;
+    color: #6F7071;
+    width: 220px;
 }
 .submitbutton {
     border: 1px solid #999999;
