added initial bread crumb template

--- a/templates/zinnia/base.html
+++ b/templates/zinnia/base.html
@@ -9,6 +9,9 @@
 {% endblock logo %}
 
 {% block bread_crumb %}
+        <div class="bread_crumbs_container">
+            {% zinnia_breadcrumbs %}
+        </div>
         {% include "zinnia/tags/search_form.html" %}
 {% endblock bread_crumb %}
 
