--- a/templates/zinnia/base.html
+++ b/templates/zinnia/base.html
@@ -11,6 +11,9 @@
 {% block bread_crumb %}
         <div class="bread_crumbs_container">
             {% zinnia_breadcrumbs %}
+            <div class="foot_print">
+                <img width="20px" src="{{ STATIC_URL }}images/footprint.png" />
+            </div>
         </div>
         {% include "zinnia/tags/search_form.html" %}
 {% endblock bread_crumb %}
