--- a/static/css/openring.css
+++ b/static/css/openring.css
@@ -198,6 +198,14 @@ a:link {
 /***************** blog end **********************/
 
 /***************** blog entry list start **********************/
+.content_title {
+}
+.content_title h1 {
+    border: 1px solid peru;
+    margin-bottom: 25px;
+    padding: 15px 5px;
+    text-align: center;
+}
 .hentry{
     float: left;
     margin-bottom: 40px;
