--- a/templates/zinnia/tags/pagination.html
+++ b/templates/zinnia/tags/pagination.html
@@ -1,59 +1,56 @@
 {% load i18n %}
-<ul class="paginator">
-  <li class="index">
-    {% blocktrans with current_page=page.number total_page=page.paginator.num_pages %}Page {{ current_page }} of {{ total_page }}{% endblocktrans %}
-  </li>
+<div class="paginator">
 
   {% if page.has_previous %}
-  <li class="page previous">
+  <div class="page previous">
     <a href="?page={{ page.previous_page_number }}{{ GET_string }}"
        title="{% trans "More recent entries" %}">&laquo;</a>
-  </li>
+  </div>
   {% endif %}
 
   {% for page_number in begin %}
-  <li class="page {% ifequal page.number page_number %}current{% endifequal %}">
+  <div class="page {% ifequal page.number page_number %}current{% endifequal %}">
     {% ifequal page.number page_number %}
     <strong>{{ page_number }}</strong>
     {% else %}
     <a href="?page={{ page_number }}{{ GET_string }}"
        title="{% trans "Entries page" %} {{ page_number }}">{{ page_number }}</a>
     {% endifequal%}
-  </li>
+  </div>
   {% endfor %}
 
   {% if middle %}
-  <li class="ellipsis">&hellip;</li>
+  <div class="eldivpsis">&heldivp;</div>
   {% for page_number in middle %}
-  <li class="page {% ifequal page.number page_number %}current{% endifequal %}">
+  <div class="page {% ifequal page.number page_number %}current{% endifequal %}">
     {% ifequal page.number page_number %}
     <strong>{{ page_number }}</strong>
     {% else %}
     <a href="?page={{ page_number }}{{ GET_string }}"
        title="{% trans "Entries page" %} {{ page_number }}">{{ page_number }}</a>
     {% endifequal%}
-  </li>
+  </div>
   {% endfor %}
   {% endif %}
 
   {% if end %}
-  <li class="ellipsis">&hellip;</li>
+  <div class="eldivpsis">&heldivp;</div>
   {% for page_number in end %}
-  <li class="page {% ifequal page.number page_number %}current{% endifequal %}">
+  <div class="page {% ifequal page.number page_number %}current{% endifequal %}">
     {% ifequal page.number page_number %}
     <strong>{{ page_number }}</strong>
     {% else %}
     <a href="?page={{ page_number }}{{ GET_string }}"
        title="{% trans "Entries page" %} {{ page_number }}">{{ page_number }}</a>
     {% endifequal%}
-  </li>
+  </div>
   {% endfor %}
   {% endif %}
 
   {% if page.has_next %}
-  <li class="page next">
+  <div class="page next">
     <a href="?page={{ page.next_page_number }}{{ GET_string }}"
        title="{% trans "More old entries" %}">&raquo;</a>
-  </li>
+  </div>
   {% endif %}
-</ul>
+</div>
