integrated a tmp template for menu in blog (need to be fixed ASAP)

--- a/templates/zinnia/base.html
+++ b/templates/zinnia/base.html
@@ -8,6 +8,14 @@
 {% show_placeholder "logo" "home" %}
 {% endblock logo %}
 
+
+<!--To display menu-->
+<!--# TODO: This need a much more better solution, just an tmp fix for now-->
+{% block menu %}
+    {% include "zinnia/menu_fixed.html" %}
+{% endblock menu %}
+
+<!--To display breadcrumbs-->
 {% block bread_crumb %}
         <div class="bread_crumbs_container">
             {% zinnia_breadcrumbs %}
@@ -18,6 +26,7 @@
         {% include "zinnia/tags/search_form.html" %}
 {% endblock bread_crumb %}
 
+<!--To display main content-->
 {% block content %}
 
 <div class="blog_entry">
