--- a/templates/base.html
+++ b/templates/base.html
@@ -28,8 +28,10 @@
                 <div class="menu_container" id="" name="">
                     <ul class="menu" id="" name="">
                         <!--for cms menu tags-->
-                        {% load menu_tags %}
-                        {% show_menu %}
+                        {% block menu %}
+                            {% load menu_tags %}
+                            {% show_menu %}
+                        {% endblock menu %}
                     </ul>
                 </div>
             </div>
