footer - added label zinnia in footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
             <div id="footer">
                 <div class="footer_container" id="" name="">
                     <div class="copyright" id="" name="">
-                        Powered by Django and Django-CMS </br>
+                        Powered by Django, Django-CMS and Zinnia </br>
                         © 2012 OpenRing
                     </div>
                 </div>
