--- a/templates/zinnia/entry_detail_base.html
+++ b/templates/zinnia/entry_detail_base.html
@@ -1,19 +1,33 @@
 {% extends "zinnia/base.html" %}
 {% load zinnia_tags i18n %}
 
+
+<!--Main entry content block-->
 {% block entry_content %}
 
-{% block entry-content %}
-  {% include object.content_template with object_content=object.html_content|safe %}
-{% endblock entry-content %}
+    <!--Html content by zinnia-->
+    {% block entry-content %}
+        {% include object.content_template with object_content=object.html_content|safe %}
+    {% endblock entry-content %}
 
-{% block entry-widgets %}
-<div class="entry-widgets">
-  <div class="entry-similar">
-    <h3>{% trans "Similar entries" %}</h3>
-    {% get_similar_entries %}
-  </div>
-</div>
-{% endblock entry-widgets %}
+    <!--For related entries-->
+    {% block entry-widgets %}
+    <div class="entry-widgets">
+        {% with entry_related=object.related_published %}
+        {% if entry_related %}
+        <div class="entry-related">
+            <div class="widget_title"> {% trans "Related articles" %} </div>
+            <ul class="widget_list" >
+                {% for entry in entry_related %}
+                <li>
+                <a href="{{ entry.get_absolute_url }}" title="{{ entry.title }}" rel="bookmark">{{ entry.title }}</a>
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+        {% endif %}
+        {% endwith %}
+    </div>
+    {% endblock entry-widgets %}
 
 {% endblock entry_content %}
