--- a/static/css/openring.css
+++ b/static/css/openring.css
@@ -317,8 +317,32 @@ a:link {
     width: 100%;
     margin-bottom: 20px;
 }
+.comment {
+    border: 2px solid #EDEDED;
+    /* float: left; */
+    margin: 8px;
+    padding: 8px;
+    width: 95%;
+}
+.comment_image {
+    border: 1px solid #CBCBCB;
+    padding: 2px;
+    width: 60px;
+    float: left;
+    margin: 0 8px 8px 0;
+}
+.comment_content {
+    padding: 2px 8px;
+    width: 98%;
+}
+.comment-info {
+    font-size: 9px;
+    width: 100%;
+}
+.fn {
+    color: peru;
+}
 .comments {
-    border: 1px solid;
     float: left;
     width: 100%;
     margin-bottom: 20px;
