--- a/templates/zinnia/entry_detail_base.html
+++ b/templates/zinnia/entry_detail_base.html
@@ -34,42 +34,47 @@
     {% block entry-comments %}
     <div class="comments" id="comments">
       <div class="widget_title" >{% trans "Comments" %}</div>
+
       {% if object.comment_count %}
-      {% with comment_list=object.comments %}
-      <ol id="comment-list">
-        {% for comment in comment_list %}
-        <li id="comment-{{ comment.pk }}-by-{{ comment.user_name|slugify }}"
-            class="comment vcard {% cycle box1,box2 %}{% if comment.user %} authenticated-comment{% if comment.user.is_staff %} staff-comment{% endif %}{% if comment.user.is_superuser %} superuser-comment{% endif %}{% endif %}">
-          <img src="{% get_gravatar comment.email 60 "G" %}"
-               class="gravatar photo" alt="{{ comment.name }}" />
-          <p class="comment-info">
-        {% if comment.url %}
-        <a href="{{ comment.url }}" rel="external nofollow"
-               class="fn url">{{ comment.name }}</a>
-        {% else %}
-        <span class="fn">{{ comment.name }}</span>
-        {% endif %}
-        {% trans "on" %}
-            <abbr class="comment-published" title="{{ comment.submit_date|date:"c" }}">
-              {{ comment.submit_date|date:"SHORT_DATETIME_FORMAT" }}
-            </abbr>
-            <a href="#comment-{{ comment.pk }}-by-{{ comment.user_name|slugify }}"
-               id="c{{ comment.pk }}" class="anchor-link"
-               title="{% trans "Direct link to this comment" %}">#</a>
-          </p>
-          {{ comment.comment|linebreaks }}
-        </li>
-        {% endfor %}
-      </ol>
-      {% endwith %}
+        {% with comment_list=object.comments %}
+            {% for comment in comment_list %}
+            <div id="comment-{{ comment.pk }}-by-{{ comment.user_name|slugify }}"
+                class="comment vcard {% cycle box1,box2 %}{% if comment.user %} authenticated-comment{% if comment.user.is_staff %} staff-comment{% endif %}{% if comment.user.is_superuser %} superuser-comment{% endif %}{% endif %}">
+
+                <div class="comment_image" >
+                    <img src="{% get_gravatar comment.email 60 "G" %}"
+                    class="gravatar photo" alt="{{ comment.name }}" />
+                </div>
+
+                <div class="comment_content">
+                    <div class="comment-info">
+                    {% if comment.url %}
+                    <a href="{{ comment.url }}" rel="external nofollow"
+                        class="fn url">{{ comment.name }}</a>
+                    {% else %}
+                    <span class="fn">{{ comment.name }}</span>
+                    {% endif %}
+                    {% trans "on" %}
+                        <abbr class="comment-published" title="{{ comment.submit_date|date:"c" }}">
+                        {{ comment.submit_date|date:"SHORT_DATETIME_FORMAT" }}
+                        </abbr>
+                        <a href="#comment-{{ comment.pk }}-by-{{ comment.user_name|slugify }}"
+                        id="c{{ comment.pk }}" class="anchor-link"
+                        title="{% trans "Direct link to this comment" %}">#</a>
+                    </div>
+                    {{ comment.comment|linebreaks }}
+                </div>
+            </div>
+            {% endfor %}
+        {% endwith %}
         {% if not object.comments_are_open %}
-      <p>{% trans "Comments are closed." %}</p>
+            <p>{% trans "Comments are closed." %}</p>
         {% endif %}
       {% else %}
         {% if object.comments_are_open %}
-      <p>{% trans "No comments yet." %}</p>
+            <p>{% trans "No comments yet." %}</p>
         {% else %}
-      <p>{% trans "Comments are closed." %}</p>
+                <p>{% trans "Comments are closed." %}</p>
         {% endif %}
       {% endif %}
     </div>
