added contactus app in settings and in placeholder in contactus template

--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -9,5 +9,7 @@
 {% endblock logo %}
 
 {% block content %}
-I am in contact us
+    {% block contactus %}
+        {% placeholder "contactus" %}
+    {% endblock contactus %}
 {% endblock content %}
