--- a/static/css/openring.css
+++ b/static/css/openring.css
@@ -210,6 +210,12 @@ a:link {
     padding: 15px 5px;
     text-align: center;
 }
+.content_title p {
+    font-size: 9px;
+    font-weight: bold;
+    margin-bottom: 25px;
+    text-align: center;
+}
 .hentry{
     float: left;
     margin-bottom: 40px;
