menu anchor tag moved on top

--- a/templates/zinnia/menu_fixed.html
+++ b/templates/zinnia/menu_fixed.html
@@ -1,11 +1,17 @@
 <!--This is just a tmp template for menu, need a better solution than this-->
 
-<li class="sibling">
-    <a href="/en/">Home</a>
-</li>
-<li class="selected">
-    <a href="/en/blog/">Blog</a>
-</li>
-<li class="sibling">
-    <a href="/en/contact-us/">Contact Us</a>
-</li>
+<a href="/en/">
+    <li class="sibling">
+    Home
+    </li>
+</a>
+<a href="/en/blog/">
+    <li class="selected">
+    Blog
+    </li>
+</a>
+<a href="/en/contact-us/">
+    <li class="sibling">
+    Contact Us
+    </li>
+</a>
